[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conscience-system"
version = "0.1.0"
description = "Django 기반 백엔드 시스템 자동 구성 도구"
readme = "README.md"
authors = [
    { name = "Seunghyun Yu", email = "yush7881@gmail.com" }
]
license = { text = "MIT" }
keywords = ["django", "backend", "setup", "automation", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.4.0,<7.0.0",
    "django>=5.0.10,<6.0.0",
    "django-cors-headers>=4.6.0",
    "django-ninja>=1.3.0",
    "python-decouple>=3.8",
    "psycopg-binary>=3.2.3",
    "whitenoise>=6.8.2",
    "rav>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/seunghyunyu/conscience-system"
Documentation = "https://github.com/seunghyunyu/conscience-system#readme"
Repository = "https://github.com/seunghyunyu/conscience-system.git"
"Bug Tracker" = "https://github.com/seunghyunyu/conscience-system/issues"
Changelog = "https://github.com/seunghyunyu/conscience-system/releases"

[project.scripts]
conscience-system = "conscience_service.gui:main"

[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
dev = [
    "setuptools>=68.0.0",
    "wheel>=0.40.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3